--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,4 +7,4 @@ jobs:
     steps:
       - name: Hello world action step
         id: hello
-        uses: Aveline-art/javascript-template-test@latest
+        uses: Aveline-art/javascript-template-test
