--- a/action.yml
+++ b/action.yml
@@ -1,8 +1,11 @@
 name: "missing-labels"
 description: "test"
 inputs:
-  myToken:
-    description: "Token"
+  githubToken:
+    description: "The GitHub Secrets token."
+    required: true
+  map[]:
+    description: "Any number of label types mapped to their missing label name. The mappings must be separated by a tilde (~) symbol. Check the docs for more details."
     required: true
 runs:
   using: "node16"
