--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
         id: hello
         uses: Aveline-art/javascript-template-test@main
         with:
-          myToken: ${{ secrets.GITHUB_TOKEN }}
+          githubToken: ${{ secrets.GITHUB_TOKEN }}
           map1: "size ~ size: missing"
           map2: "Feature ~ Feature: missing"
           map3: "role ~ role: missing"
