--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,13 +3,12 @@ on:
     types: [opened]
 
 jobs:
-  hello_world_job:
+  add_missing_label:
     runs-on: ubuntu-latest
-    name: A job to say hello
+    name: A job to add missing labels
     steps:
-      - name: Hello world action step
-        id: hello
-        uses: Aveline-art/javascript-template-test@main
+      - name: Add labels step
+        uses: Aveline-art/javascript-template-test@v0.0.1-alpha
         with:
           githubToken: ${{ secrets.GITHUB_TOKEN }}
           labelMap1: "documentation ~ size: missing"
